[package]
name = "game_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.1.2"  # For keyboard simulation
dialoguer = "0.10.4"  # For interactive console UI
console = "0.15.7"  # For terminal styling
dirs = "5.0.1"  # For finding user directories
fs_extra = "1.3.0"  # For file operations
anyhow = "1.0"  # For error handling
